# tinySPH

./: CMakeLists.txt  README.md
cases/: damBreakBI.sh  stillWater.sh  stillWaterBI.sh  stillWaterDBC.sh  stillWaterDBCperiodic.sh  stillWaterMDBC.sh  stillWaterMDBCperiodic.sh
cases/dambreak2D_withBI/: CMakeLists.txt  damBreak.sh  dambreak_interpolationPlane.ptcs  dambreak_interpolationPlane.vtk  dambreak_wall.ptcs  generateDamBreakGeometryWithBI.py  main.cpp  parameters.hpp
cases/dambreak2D_withBI/geometryLR/: dambreak_interpolationPlane.ptcs  dambreak_sensors.ptcs  dambreak_sensors.vtk  dambreak_wall.vtk  parameters.hpp
cases/dambreak2D_withBI/measuretools/: measurePressure.h
cases/dambreak2D_withDBC/: CMakeLists.txt  damBreak.sh  dambreak_fluid.vtk  dambreak_wall.vtk  main.cpp  main_simple.cpp  parameters.hpp
cases/dambreak2D_withDBCsimple/: CMakeLists.txt  damBreak.sh  dambreak_fluid.ptcs  dambreak_wall.ptcs  dambreak_wall.vtk  generateDamBreakGeometryWithDBC.py  main.cpp  parameters.hpp
cases/dambreak2D_withGWBC/: CMakeLists.txt  damBreak.sh  dambreak_interpolationPlane.ptcs  dambreak_wall.ptcs  generateDamBreakGeometryWithDBC.py  main.cpp  parameters.hpp
cases/dambreak2D_withMDBC/: damBreak.sh  dambreak_ghostNodes.ptcs  dambreak_ghostNodes.vtk  dambreak_wall.ptcs  dambreak_wall.vtk  generateDamBreakGeometryWithMDBC.py  main.cpp  parameters.hpp
cases/steadyheatconduntion2D/: CMakeLists.txt  generateSteadyHeatConduction.py  heatconduction_boundary.ptcs  heatconduction_boundary.vtk  heatconduction_interpolationPlane.ptcs  heatconduction_interpolationPlane.vtk  heatconduction_solid.ptcs  heatconduction_solid.vtk  main.cpp  parameters.hpp  steadyHeatConduction.sh  stillwater_interpolationPlane.ptcs
cases/steadyheatconduntion2D/geometryLarge/: heatconduction_boundary.vtk  heatconduction_solid.ptcs  heatconduction_solid.vtk  parameters.hpp
cases/stillWater2D_withMDBC/: CMakeLists.txt  generateStillWaterGeometryWithMDBC.py  parameters.hpp  stillWater.sh  stillwater_fluid.ptcs  stillwater_fluid.vtk  stillwater_ghostNodes.ptcs  stillwater_ghostNodes.vtk  stillwater_interpolationPlane.ptcs  stillwater_interpolationPlane.vtk  stillwater_wall.ptcs  stillwater_wall.vtk
cases/stillwater2D_withBI/: CMakeLists.txt  generateStillWaterGeometryWithBI.py  main.cpp  mainDefault.cpp  stillWater.sh
cases/stillwater2D_withBI/geometryStraightHR/: parameters.hpp  stillwater_interpolationPlane.vtk  stillwater_wall.ptcs  stillwater_wall.vtk
cases/stillwater2D_withDBC/: CMakeListsDefault.txt  deval.pvsm  generateStillWaterGeometryWithDBC.py  main.cpp  mainDefault.cpp  parameters.hpp  stillWater.sh  stillwater_interpolationPlane.ptcs  stillwater_wall.ptcs
cases/stillwater2D_withDBC_periodic/: CMakeListsDefault.txt  generateStillWaterGeometryWithDBC.py  main.cpp  mainDefault.cpp
cases/stillwater2D_withMDBC/: CMakeLists.txt  CMakeListsDefault.txt  generateStillWaterGeometryWithMDBC.py  main.cpp  parameters.hpp  stillWater.sh  stillwater_ghostNodes.ptcs  stillwater_ghostNodes.vtk  stillwater_interpolationPlane.ptcs  stillwater_interpolationPlane.vtk  stillwater_wall.vtk
cases/stillwater2D_withMDBC_periodic/: CMakeListsDefault.txt  generateStillWaterGeometryWithMDBC.py  initialState.pvsm  main.cpp  parameters.hpp  periodicBC.hpp  stillWater.sh  stillwater_fluid.ptcs  stillwater_fluid.vtk  stillwater_ghostNodes.ptcs  stillwater_ghostNodes.vtk  stillwater_interpolationPlane.vtk  stillwater_wall.ptcs  stillwater_wall.vtk  symplecticIntegrator.hpp
src/: diffusiveTerms.hpp  interactionHandler.hpp  interactionHandlerMDBC.hpp  interactionHandlerMDBC_withPeriodicBC.hpp  interactionHandler_heatSIMPLE.hpp  interactionHandler_withPeriodicBC.hpp  kernel.hpp  measurement.hpp  postprocessor.hpp  postprocessor_heatSIMPLE.hpp  pressureAndEOS.hpp  visoucsTerms.hpp
src/WCSPH/: integration.hpp  interactionStructures.hpp  interpolationStructures.hpp  variables.hpp  writeGridData.hpp  writeParticleData.hpp
src/WCSPH_BI/: integration.hpp  interactionStructures.hpp  interpolationStructures.hpp  variables.hpp  writeParticleData.hpp
src/WCSPH_GWBC/: integration.hpp  interactionStructures.hpp  interpolationStructures.hpp  variables.hpp
src/WCSPH_MDBC/: integration.hpp  interactionStructures.hpp  interpolationStructures.hpp  variables.hpp  writeParticleData.hpp
src/general/: generalTools.hpp  matrix.hpp  point.hpp  testDataStructures  testDataStructures.cpp  vector.hpp
src/heatSIMPLE/: integration.hpp  interactionStructures.hpp  interpolationStructures.hpp  variables.hpp  writeParticleData.hpp
tools/: PTCStoVTK.py  PTCStoVTKheatSimple.py  PTCStoVTKstructuredGrid.py  PTCStoVTKstructuredGridStillWater.py  parseCasePath.sh  parseCaseResults.sh  structuredGridSimple.py  structuredGridSimpleStillWater.py  structuredGridSimpleheatSimple.py
(+65 files in other folders)
